// ProtoMessage.proto
syntax = "proto3";

package com.gm.link.common.proto;

// ProtoMessage.proto
option java_package = "com.gm.link.common.protobuf";
option java_outer_classname = "ProtoMessage";

message ProtoMessage {
  // 固定头
  fixed32 magic = 1;        // 4字节魔数(0xDEADBEEF)
  uint32 version = 2;       // 2字节协议版本
  uint32 cmd = 3;           // 2字节命令字,0x0001-业务消息，0x0002-ack，0x0003-心跳

  // 业务标识
  uint32 msg_feature = 4;   // 2字节功能标识(按位定义)

  // 消息元数据
  string msg_id = 5;        // 雪花算法生成的消息ID
  string seq_id = 6;        // 会话内严格递增的序列号
  int64 timestamp = 7;      // Unix时间戳(毫秒)
  string from_user_id = 8;  // 发送方唯一标识
  optional string to_user_id = 9;    // [可选]私聊对象ID
  optional string to_group_id = 10;  // [可选]接收群聊ID

  // 消息属性
  MessageType msg_type = 11; // 消息内容类型
  MessageStatus msg_status = 12; // 消息状态
  uint32 flags = 13;         // 2字节标志位(bit0=是否需要ACK)
  optional uint32 retry_count = 14;   // [可选]重试次数(0-255)

  // 数据校验
  uint32 data_length = 15;   // 4字节数据体长度
  fixed32 check_sum = 16;    // 4字节校验码(CRC32)
  bytes body = 17;           // Protobuf序列化后的业务数据
}

enum MessageType {
  MSG_UNKNOWN = 0;
  MSG_TEXT = 1;    // 文本消息
  MSG_IMAGE = 2;   // 图片消息
  MSG_VOICE = 3;   // 语音消息
  MSG_VIDEO = 4;   // 视频消息
  MSG_FILE = 5;    // 文件消息
  MSG_CMD = 6;     // 控制命令
}

enum MessageStatus {
  STATUS_SENDING = 0;   // 发送中
  STATUS_SENT = 1;      // 已发送
  STATUS_DELIVERED = 2; // 已送达
  STATUS_READ = 3;      // 已读
}