syntax = "proto3";

package com.gm.link.common.domain.protobuf;

option java_package = "com.gm.link.common.domain.protobuf";
option java_multiple_files = true;

message PacketHeader {
  fixed32 app_id = 1; // 业务id，Link也是一个业务，标识所属业务模块
  fixed64 uid = 2;  // 用户id，标识发送方
  string token = 3; // 用户凭证，验证用户身份，16字节，可根据业务调整
  int32 compression = 4;  // 1字节，压缩方式，标识是否启用压缩，0-不压缩，1-gzip
  int32 encryption = 5; // 1字节，加密方式，标识是否启用加密，0-不加密，1-aes
  int32 messageType = 6;  // 2字节，数据类型标识，标识数据类型，0-文本，1-图片，2-语音，3-视频，4-文件，5-控制命令，6-ack，7-心跳，8-其他
}

message PacketBody {
  string data = 1;  // json数据
}